@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/googleearth
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/googleearth/ChangeLog,v 1.20 2007/01/08 07:50:25 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/googleearth/ChangeLog,v 1.21 2007/01/12 19:29:38 masterdriverz Exp $
+
+*googleearth-4 (12 Jan 2007)
+
+  12 Jan 2007; Charlie Shepherd <masterdriverz@gentoo.org>
+  -googleearth-4_beta.ebuild, +googleearth-4.ebuild:
+  Bump to googleearth-4; fixes bug 160849
 
   08 Jan 2007; <genstef@gentoo.org> googleearth-4_beta.ebuild:
   Fix troubles with newer ati drivers thanks to anarchy in bug 158701
